# Abyssal-CV-2022

./: CMakeLists.txt  README.md
asset/: RoboMasterConfig.hpp
asset/AutoSaveVideo/: 赛场录像保存在这个文件夹
asset/TrainData/: best_21_11.xml
src/: main.cpp
src/armor/: armor-identify.cpp  armor-identify.hpp  armor-tool.hpp
src/armor/KCF/: armor-KCF.cpp  armor-KCF.hpp
src/camera/: camera-stream.cpp  camera-stream.hpp
src/control/: control-switch.cpp  control-switch.hpp  control-synchronize.cpp  control-synchronize.hpp
src/decision/: decision-making.cpp  decision-making.hpp  decision-tool.hpp
src/energy/: energy-buff.cpp  energy-buff.hpp  energy-tools.hpp
src/serial/: serial-port.cpp  serial-port.hpp
src/serial/serial-2nd/: serial-port-2nd.cpp  serial-port-2nd.hpp  serial-synchronize-2nd.cpp
src/serial/serial-TUP/: serial-port-TUP.cpp  serial-port-TUP.hpp  serial-synchronize-TUP.cpp
src/serial/serial-TUP/CRC/: serial-CRC-TUP.cpp  serial-CRC-TUP.hpp
src/video/: video-save.cpp  video-save.hpp
tools/: Auto-Start-Run-Main.sh  Auto-Start-Run-Sentinel.sh  auto-start-run.sh  train-SVM.cpp
tools/CameraCalibration/: CameraCalibration.py
